# fastapi-boilerplate

./: .augment-guidelines  .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .ruff.toml  .secrets.baseline  CBV_README.md  Makefile  README.md  README_COMMANDS.md  alembic.ini  app.py  command.py  debug_password.py  madcrow  main.py  mypy.ini  pyproject.toml  pytest.ini  sonar-project.properties  test_auth_login.py  test_create_admin.py  test_db_connection.py  test_dify_tokens.py  test_docs_csp.py  test_error_handling.py  test_redis_extension.py  test_security_headers.py
.config/: .env.production.example
.config/jenkins/: jenkinsfile
.cursor/rules/: fastapi-madcrow.mdc
alembic/: env.py
alembic/versions/: 3c35a1d92ec6_initial_migration_with_accounts_model.py  4358ef05cf7c_initial_migration_with_account_model.py  6eb75cddafb3_password_salt.py  72f9d34a7b8b_initial.py
docker/: docker-compose.yaml
docs/: DATABASE_SETUP.md  PRODUCTION_CHECKLIST.md  PROTECTION_SYSTEM.md  RATE_LIMITING.md  README.md  REDIS_EXTENSION.md  SECURITY_HEADERS.md  _template.md  api-reference.md  authentication.md  class-based-views.md  commands.md  database-setup.md  error-handling.md  events.md  getting-started.md  login-decorator.md  profile-api.md  tests.md
examples/: custom_event_example.py  event_system_example.py
recovery/madcrow-backend/: .env.example  claude_desktop_config.json  main.py  pyproject.toml  structure.md
scripts/: bandit.sh  production_audit.py  test_precommit.py
src/: __init__.py  beco_app.py  lifespan_manager.py
src/alembic/: env.py
src/configs/: __init__.py  app_config.py  logging_config.py
src/dependencies/: __init__.py  auth.py  db.py  redis.py
src/entities/: __init__.py  account.py  base.py  status.py  timestamp_mixin.py
src/events/: __init__.py  dispatcher.py  handlers.py  models.py  signals.py
src/exceptions/: __init__.py  base.py  business.py  database.py  validation.py
src/extensions/: ext_compress.py  ext_cors.py  ext_db.py  ext_error_handling.py  ext_events.py  ext_logging.py  ext_logging_middleware.py  ext_openapi.py  ext_protection.py  ext_redis.py  ext_security.py  ext_set_secretkey.py  ext_warnings.py
src/libs/: __init__.py  login.py  password.py
src/middleware/: __init__.py  error_middleware.py  logging_middleware.py  protection_middleware.py  security_middleware.py
src/models/: __init__.py  account.py  auth.py  category.py  errors.py  health.py  profile.py  rate_limit.py  token.py
src/routes/: __init__.py  base_router.py  cbv.py  health.py  locations.py  protection.py
src/routes/v1/: __init__.py  (+6 more)
src/services/: __init__.py  auth_service.py  database_example.py  health.py  locations.py  session_service.py  sites.py  token_service.py
src/utils/: __init__.py  error_factory.py  rate_limiter.py  validation.py
tests/: __init__.py  conftest.py  run_core_tests.py  run_tests.py  test_events.py  test_setup.py
tests/api/: __init__.py  test_auth_endpoints.py
tests/e2e/: __init__.py  test_auth_flows.py  test_rate_limiting.py
tests/edge_cases/: __init__.py  test_edge_cases.py
tests/integration/: __init__.py  test_database.py  test_redis.py
tests/performance/: __init__.py  test_performance_validation.py
tests/security/: __init__.py  test_security_validation.py
(+56 files in other folders)
